2nd training/Community/Community/Community1/force-app/main/default/objects/Relocation__c/Relocation__c.object-meta.xml
<CustomObject>
    <label>Relocation Service</label>
    <nameField>
        <label>Relocation Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relocation Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>