2nd training/Community/Community/Community1/force-app/main/default/objects/Relocation__c/fields/Immigration_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Document_Type__c</fullName>
    <label>Immigration Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employment Pass</fullName>
            </value>
            <value>
                <fullName>Dependent Pass</fullName>
            </value>
            <value>
                <fullName>Special Pass</fullName>
            </value>
            <value>
                <fullName>Long-Term Visitor Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>