2nd training/Community/Community/Community1/force-app/main/default/objects/Relocation__c/fields/Immigration_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Service_Type__c</fullName>
    <label>Immigration Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>