2nd training/Community/Community/Community1/force-app/main/default/objects/Relocation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Relocation Services</relationshipLabel>
    <relationshipName>Relocation_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>