2nd training/Community/Community/Community1/force-app/main/default/objects/Relocation__c/recordTypes/Immigration.recordType-meta.xml
<RecordType>
    <fullName>Immigration</fullName>
    <active>true</active>
    <description>Immigration Services</description>
    <label>Immigration</label>
</RecordType>